--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="download.jpg" /><br />
       <button onclick="location.reload()">RESTART THE GAME</button>
     </div>
-    <script src="01 Level.js"></script>
+    <script src="index.js"></script>
     <p id="copyright">Ⓒ Abid Hossain FIrst Game " Babu The Shooter " 2022 Is Ready.</p>
   </body>
 </html>
