Updating the link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="next-level-2">
-      <a href="/level 2.html">Ready For Next Level</a>
+      <a href="https://www.youtube.com/watch?v=XP8-1mz4vlE&list=RDMM&start_radio=1&rv=0g0i23A0EXE">Ready For Next Level</a>
     </div>
     <div class="message">
       <img src="download.jpg" /><br />
